[gd_scene load_steps=4 format=2]

[ext_resource path="res://3DToolbox/3DLineSettings.gd" type="Script" id=1]
[ext_resource path="res://3DToolbox/ColBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://3DToolbox/DensBox.tscn" type="PackedScene" id=3]

[node name="LineSettings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 24.0
hint_tooltip = "Set grid visibility. "
focus_next = NodePath("../ColBox")
focus_previous = NodePath("../DensBox")
focus_mode = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 51.0
margin_bottom = 19.0
text = "Visible: "

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
margin_left = 55.0
margin_right = 79.0
margin_bottom = 24.0
focus_mode = 0
pressed = true

[node name="ColBox" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 139.0
hint_tooltip = "Set grid line colour (red, green, blue)."
focus_next = NodePath("../DensBox")
focus_previous = NodePath("../HBoxContainer/CheckBox")
focus_mode = 1

[node name="DensBox" parent="." instance=ExtResource( 3 )]
margin_top = 149.0
margin_right = 1024.0
margin_bottom = 195.0
hint_tooltip = "Set grid spacing."
max_value = 1
[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="colour_changed" from="ColBox" to="." method="_on_ColBox_colour_changed"]
[connection signal="density_changed" from="DensBox" to="." method="_on_DensBox_density_changed"]
